# climate_policy

./: .gitignore  README.md  prompt_policy_proposal_v2.txt  pyproject.toml  s05_match_top3.py  s06_match_top10.py  s09_climate_score.py  s12_split_file_65.py  s16_topic_extraction.py  s19_extract_id_and_comment.py  s20_embedding_similarity_eq2.py  s21_regression_similarity_eq3.py  s24_split_foia_comments.py  s27_frs_fed_revise.py  s28_eq3_topics.py  s30_role_based_acceptance_revision.py  s31_accept_and_revise_mc.py  s33_accept_and_revise_mc.py  s34_accept_and_revise_topics.py
scripts/: s01_pdf_page_counter_and_parser.py  s02_count_text_characters.py  s03_describe_sections.py  s04_paragraph_best_match.py  s07_paragraph_gpt_comparison.py  s08_diff_vector_comment_similarity.py  s10_plot_scores.py  s11_gpt_influence_assessment.py  s13_ols.py  s14_upd_occ.py  s15_tfidf_topic_analysis.py  s17_ols_topics.py  s18_topic_correlation.py  s22_gpt_paragraph_scoring.py  s23_analyze_streamlit.py  s25_parse_fed_comments.py  s26_decile_alignment_analysis_eq4.py  s29_frs_fed_revise_mc.py  s32_role_rankings.py
streamlit_survey/: README.md  app.py  attention_check.csv  comments_id_and_content_full.csv  comments_id_and_content_survey.csv  sample.py
